--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Youtube playback and public sharing for the Volumio",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ytdl-core": "0.11.1",
-    "kew":"0.7.0"
+    "kew":"0.7.0",
+    "googleapis":"19.0.0"
   }
 }
