--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Cris Pintea <cris@pintea.net>",
+  "author": "Cris Pintea <cris@pintea.net>, Stefan Lässer <sla89@gmx-topmail.de>",
   "license": "MIT",
   "volumio_info": {
     "prettyName": "Youtube Playback",
